# truffleHogger

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  test_all.py
.github/workflows/: tags.yml  tests.yml
scripts/: searchOrg.py
truffleHogger/: ignore.json  regexes.json  truffleHogger.py
