[tool.poetry]
name = "trufflehogger"
version = "3.4.0"
description = "TruffleHogger - Secret Scanning Utility fork of TruffleHog which retains entropy searches"
authors = ["Jason Giedymin <jgiedymin@ecri.org>"]
license = "GPLv2"
readme = ["README.md", "LICENSE"]
repository = "https://github.com/ecri-org/truffleHogger"
homepage = "https://github.com/ecri-org/truffleHogger"
keywords = ["secrets", "secret-scanning"]


[tool.poetry.dependencies]
python = ">=3.7"
gitpython = "3.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-cov = "4.1.0"
unittest2 = "1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
